add on/off toggle and //aq

--- a/settings.html
+++ b/settings.html
@@ -5,8 +5,12 @@
             <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
         </div>
         <div class="inline-drawer-content">
-            <div class="autoquote-extension_block flex-container">
-                AutoQuote is enabled. Enjoy.
+            <div class="autoquote-extension_block flex-container" style="display: flex; align-items: center; gap: 8px; padding-left: 5px;">
+                <label class="switch">
+                    <input type="checkbox" id="autoquote-toggle">
+                    <span class="slider round"></span>
+                </label>
+                <span>Toggle AutoQuote on/off</span>
             </div>
             <hr class="sysHR" />
         </div>
